fix bug overflow individual

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -4,7 +4,7 @@ body {
   @extend %Monts-Light;
   //   color: $text;
   position: relative;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   margin: 0 auto;
   font-size: 16px;
   color: $white;
